# riscv-multicore-pipeline-cpu

./: .gitignore  CMakeLists.txt  Learn.md  Makefile  README.md  driver.py  requirements.txt  test_runner.py
backup/: infrastructure.py
doc/: architecture.md  design.md  software.md  testing.md  verilog.md
rtl/: alu.v  alu_control.v  branch_unit.v  control_unit.v  core.v  csr_file.v  decoder.v  dmem.v  hazard_detection_unit.v  imem.v  regfile.v
rtl/cache/: data_cache.v  instruction_cache.v  l1_arbiter.v  l1_data_cache.v  l1_inst_cache.v  l2_cache.v
rtl/core/: backend.v  branch_predictor.v  branch_unit.v  control_status_register_file.v  core.v  core_tile.v  csr_file.v  decoder.v  forwarding_unit.v  hazard_detection_unit.v  imm_gen.v  immediate_generator.v  load_store_unit.v  pc.v  regfile.v
rtl/core/backend/: alu.v  alu_control_unit.v  backend.v  control_status_register_file.v  control_unit.v  forwarding_unit.v  hazard_detection_unit.v  immediate_generator.v  load_store_unit.v  mdu.v
rtl/core/frontend/: frontend.v
rtl/interconnect/: bus_arbiter.v  bus_interconnect.v
rtl/memory/: dmem.v  icache.v  imem.v  instruction_memory.v  main_memory.v
rtl/peripherals/: timer.v  uart_sim.v
rtl/system/: chip_top.v  memory_subsystem.v
sim/: imem_tb.vvp  program.hex  wave.vcd
software/: Makefile  link.ld  main.c  make_hex.py  start.S
software/alu_test/: main.c  start.S
software/csr_exception/: main.c  start.S
software/fibonacci/: main.c  start.S
tb/: core_tb.v  imem_tb.v  pc_tb.v  program.hex  simple_tb.v
test/: CMakeLists.txt  driver.py  env.py
test/common/: tb_base.h
test/hardware/: CMakeLists.txt
test/hardware/common/: tb_base.cpp
test/hardware/integration/: CMakeLists.txt  test_arithmetic.cpp  test_arithmetic.py  test_backend.cpp  test_backend.py  test_basic_ops.cpp  test_basic_ops.py  test_control_flow.cpp  test_control_flow.py  test_csr_exception.cpp  test_csr_exception.py  test_csr_interrupt.cpp  test_csr_interrupt.py  test_csr_mret.cpp  test_csr_mret.py  test_csr_rw.cpp  test_csr_rw.py  test_csr_traps.py  test_forwarding.cpp  test_forwarding.py  test_hazards.cpp  test_hazards.py  test_mdu.cpp  test_mdu.py  test_memory_ops.cpp  test_memory_ops.py
test/hardware/unit/: CMakeLists.txt  direct_test_core_tile.py  test_alu.cpp  test_alu.py  test_alu_control.py  test_alu_control_unit.py  test_branch_predictor.cpp  test_branch_predictor.py  test_branch_unit.cpp  test_branch_unit.py  test_bus_arbiter.py  test_control_status_register_file.cpp  test_control_status_register_file.py  test_control_unit.cpp  test_control_unit.py  test_core_tile.cpp  test_core_tile.py  test_forwarding_unit.py  test_hazard_detection_unit.py  test_immediate_generator.py  test_instruction_cache.py  test_instruction_decoder.cpp  test_instruction_decoder.py  test_l1_arbiter.py  test_l1_data_cache.py  test_l1_inst_cache.py  test_l2_cache.cpp  test_l2_cache.py  test_load_store_unit.py  test_main_memory.py  test_mdu_unit.py  test_memory_subsystem.cpp  test_memory_subsystem.py  test_program_counter.py  test_regfile.py  test_timer.cpp  test_timer.py
test/integration_test/: CMakeLists.txt
test/integration_test/hardware/: CMakeLists.txt  test_arithmetic.cpp  test_backend.cpp  test_basic_ops.cpp  test_control_flow.cpp  test_csr_exception.cpp  test_csr_interrupt.cpp  test_csr_mret.cpp  test_csr_rw.cpp  test_forwarding.cpp  test_hazards.cpp  test_mdu.cpp  test_memory_ops.cpp
test/integration_test/software/: CMakeLists.txt  test_csr.cpp  test_fibonacci.cpp
test/integration_test/software/common/: link.ld
test/integration_test/software/test_csr/: main.c
test/integration_test/software/test_fibonacci/: main.c  start.S
test/software/: CMakeLists.txt  program_loader.h  test_csr.cpp  test_fibonacci.cpp
test/software/common/: common.c  common.h
test/software/test_csr/: start.S  test_csr.py
test/software/test_fibonacci/: test_fibonacci.py
test/unit_test/: CMakeLists.txt  test_alu.cpp  test_alu_control_unit.cpp  test_branch_predictor.cpp  test_branch_unit.cpp  test_bus_arbiter.cpp  test_control_status_register_file.cpp  test_control_unit.cpp  test_core_tile.cpp  test_forwarding_unit.cpp  test_hazard_detection_unit.cpp  test_immediate_generator.cpp  test_instruction_decoder.cpp  test_l1_arbiter.cpp  test_l1_data_cache.cpp  test_l1_inst_cache.cpp  test_l2_cache.cpp  test_load_store_unit.cpp  test_main_memory.cpp  test_mdu_unit.cpp  test_memory_subsystem.cpp  test_program_counter.cpp  test_regfile.cpp  test_timer.cpp
test/util/: path.py  program.py  toolchain.py
tests/: cocotb_utils.py  infrastructure.py  link.ld  uart_monitor.py
tests/alu_test/: main.c  test_tb.v
tests/common/: link.ld  system_top.v
tests/csr_exception/: main.c
tests/hardware/: test_alu.py  test_alu_control.py  test_alu_control_unit.py  test_branch_predictor.py  test_branch_unit.py  test_control_status_register_file.py  test_control_unit.py  test_forwarding_unit.py  test_hazard_detection_unit.py  test_immediate_generator.py  test_instruction_decoder.py  test_load_store_unit.py  test_main_memory.py  test_program_counter.py  test_regfile.py  test_timer.py
tests/hardware/integration/: common.py  test_arithmetic.py  test_backend.py  test_basic_ops.py  test_control_flow.py  test_csr_traps.py  (+2 more)
tests/integration/: test_arithmetic.py  test_backend.py  test_basic_ops.py  test_chip_top.py  test_control_flow.py  test_csr_traps.py  test_hazards.py  test_memory_ops.py
tests/legacy/: cocotb_utils.py
tests/simple/: alu.hex  branch.hex  full.hex
tests/simple_mem/: program.hex
tests/test_csr_exception/: test_csr_exception.py
tests/test_hazard/: program.hex  test_hazard.py
tests/test_simple_alu/: test_simple_alu.py  test_tb.v
tests/test_simple_branch/: test_simple_branch.py  test_tb.v
tests/test_simple_full/: test_simple_full.py  test_tb.v
tests/test_simple_mem/: test_simple_mem.py  test_tb.v
tests/unit/: test_branch_unit.py  test_control_unit.py  test_forwarding_unit.py  test_hazard_detection_unit.py  test_instruction_cache.py  test_load_store_unit.py  test_program_counter.py
tools/: run_test.py
(+39 files in other folders)
